<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:paddingLeft="50.0dip"
            android:paddingRight="50.0dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="5dp"
            android:src="@drawable/login_home" />

        <TextView
            android:id="@+id/editText1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="20dip"
            android:text="@string/titleHomeTaiKhoan"
            android:textColor="@android:color/black"
            android:textSize="17.0dp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_list_separator" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15.0dip"
                    android:paddingTop="5.0dip" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10.0dip" >

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/titleTenDangNhap"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/textTaiKhoan"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10.0dip" >

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/titleMatKhau"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/textMatKhau"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnlogin"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_selector"
                        android:paddingBottom="10.0dip"
                        android:paddingLeft="50.0dip"
                        android:paddingRight="50.0dip"
                        android:paddingTop="10.0dip"
                        android:onClick="login"
                        android:text="@string/textbtnDangNhap"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>